logs/dag_id=spotify_etl_pipeline/run_id=scheduled__2025-09-15T05:00:00+00:00/task_id=gold_transform/attempt=4.log
[2025-09-15T06:23:05.265+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform scheduled__2025-09-15T05:00:00+00:00 [queued]>
[2025-09-15T06:23:05.273+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform scheduled__2025-09-15T05:00:00+00:00 [queued]>
[2025-09-15T06:23:05.275+0000] {taskinstance.py:1361} INFO - Starting attempt 4 of 6
[2025-09-15T06:23:05.287+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): gold_transform> on 2025-09-15 05:00:00+00:00
[2025-09-15T06:23:05.293+0000] {standard_task_runner.py:57} INFO - Started process 31178 to run task
[2025-09-15T06:23:05.296+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'spotify_etl_pipeline', 'gold_transform', 'scheduled__2025-09-15T05:00:00+00:00', '--job-id', '776', '--raw', '--subdir', 'DAGS_FOLDER/spotify_dag.py', '--cfg-path', '/tmp/tmpbka1ml1j']
[2025-09-15T06:23:05.300+0000] {standard_task_runner.py:85} INFO - Job 776: Subtask gold_transform
[2025-09-15T06:23:05.355+0000] {task_command.py:415} INFO - Running <TaskInstance: spotify_etl_pipeline.gold_transform scheduled__2025-09-15T05:00:00+00:00 [running]> on host 0d0cd054d690
[2025-09-15T06:23:06.112+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='spotify_etl_pipeline' AIRFLOW_CTX_TASK_ID='gold_transform' AIRFLOW_CTX_EXECUTION_DATE='2025-09-15T05:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-09-15T05:00:00+00:00'
[2025-09-15T06:23:06.132+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/etl/db_utils.py", line 11, in run_sql_scripts
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 3: CREATE OR REPLACE TABLE gold.fact_listening_history AS
                          ^

[2025-09-15T06:23:06.147+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=spotify_etl_pipeline, task_id=gold_transform, execution_date=20250915T050000, start_date=20250915T062305, end_date=20250915T062306
[2025-09-15T06:23:06.160+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 776 for task gold_transform (syntax error at or near "TABLE"
LINE 3: CREATE OR REPLACE TABLE gold.fact_listening_history AS
                          ^
; 31178)
[2025-09-15T06:23:06.215+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-09-15T06:23:06.258+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
